--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculator</title>
-    <link rel="stylesheet" href="calculator.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Calculator</title>
+  <link rel="stylesheet" href="calculator.css" />
 </head>
 <body>
-   <div class="calculator">
-    <input type="text" id="display" readonly />
-        
+ <div class="calculator">
+  <div class="custom-display">
+    <div id="history" class="history"></div>
+    <div id="display" class="result">0</div>
+  </div>
 
-    <div class="buttons">
-      <button style="color: #28a745; font-weight: bold;" onclick="clearDisplay()">C</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="deleteLast()">DEL</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="appendValue('/')">÷</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="appendValue('*')">*</button>
-      <button   onclick="appendValue('7')">7</button>
-      <button  onclick="appendValue('8')">8</button>
-      <button  onclick="appendValue('9')">9</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="appendValue('-')">-</button>
-      <button  onclick="appendValue('4')">4</button>
-      <button  onclick="appendValue('5')">5</button>
-      <button  onclick="appendValue('6')">6</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="appendValue('+')">+</button>
-      <button  onclick="appendValue('1')">1</clas button>
-      <button  onclick="appendValue('2')">2</button>
-      <button  onclick="appendValue('3')">3</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="appendValue('0')" class="zero">0</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="appendValue('(')">(</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="appendValue(')')">)</button>
-      <button style="color: #28a745; font-weight: bold;" onclick="appendValue('.')">.</button>
-      <button  onclick="calculate()" class="equals">=</button>
-    </div>
-   </div>
-    <script src="calc.js"></script>
+  <div class="buttons">
+    <button class="green" onclick="clearDisplay()">C</button>
+    <button class="green" onclick="deleteLast()">DEL</button>
+    <button class="green" onclick="appendValue('/')">÷</button>
+    <button class="green" onclick="appendValue('*')">*</button>
+
+    <button onclick="appendValue('7')">7</button>
+    <button onclick="appendValue('8')">8</button>
+    <button onclick="appendValue('9')">9</button>
+    <button class="green" onclick="appendValue('-')">-</button>
+
+    <button onclick="appendValue('4')">4</button>
+    <button onclick="appendValue('5')">5</button>
+    <button onclick="appendValue('6')">6</button>
+    <button class="green" onclick="appendValue('+')">+</button>
+
+    <button onclick="appendValue('1')">1</button>
+    <button onclick="appendValue('2')">2</button>
+    <button onclick="appendValue('3')">3</button>
+    <button onclick="appendValue('0')">0</button>
+
+    <button class="green" onclick="appendValue('(')">(</button>
+    <button class="green" onclick="appendValue(')')">)</button>
+    <button class="green" onclick="appendValue('.')">.</button>
+    <button class="equals" onclick="calculate()">=</button>
+  </div>
+</div>
+
+
+  <script src="calc.js"></script>
 </body>
 </html>
